--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -4,12 +4,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title_activity_login">LoginActivity</string>
+    <string name="login_textLogin">Login:</string>
+    <string name="login_textPassword">Password:</string>
     <string name="login_title">Enter the system</string>
     <string name="login_email">E-mail</string>
     <string name="login_password">Password</string>
-    <string name="login_loginButton">Login</string>
-    <string name="login_singupButton">Sing up</string>
+    <string name="login_loginButton">          Login</string>
+    <string name="login_singupButton">No account yet? Create one!</string>
     <string name="login_enterEmail">Enter your e-mail</string>
     <string name="title_activity_register">RegisterActivity</string>
 
