--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,18 +1,37 @@
 <resources>
+    <!-- Main-->
+
     <string name="app_name">My Application</string>
     <string name="title_activity_login">Activity Login</string>
+    <string name="hello">Hello!</string>
+    <string name = "create_account_text">If you are her for the first time, you can create account.</string>
+    <string name = "login_text">or</string>
 
-    <string name="hello_world">Hello world!</string>
+
+
     <string name="action_settings">Settings</string>
+
+
+    <!-- Login -->
 
     <string name="login_textLogin">Login:</string>
     <string name="login_textPassword">Password:</string>
     <string name="login_title">Enter the system</string>
-    <string name="login_email">E-mail</string>
-    <string name="login_password">Password</string>
-    <string name="login_loginButton">          Login</string>
-    <string name="login_singupButton">No account yet? Create one!</string>
+    <string name="email">E-mail</string>
+    <string name="password">Password</string>
+    <string name="loginButton">          Login</string>
+    <string name="singupText">No account yet? Create one!</string>
     <string name="login_enterEmail">Enter your e-mail</string>
     <string name="title_activity_register">RegisterActivity</string>
+
+
+    <!-- SignUp -->
+    <string name="signup_title">Sign up, please!</string>
+    <string name="signup_name">Name</string>
+    <string name="signup_surname">Surname</string>
+    <string name="createButton">Create Account</string>
+    <string name="signup_course">Course</string>
+    <string name="signup_group">Group</string>
+    <string name="back_text">Already a member? Login</string>
 
 </resources>
