--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -34,4 +34,16 @@
     <string name="signup_group">Group</string>
     <string name="back_text">Already a member? Login</string>
 
+    <!-- View -->
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="choose">Choose day:</string>
+
+
+
+
 </resources>
