Add Schedule. Delete nessasry

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -35,12 +35,12 @@
     <string name="back_text">Already a member? Login</string>
 
     <!-- View -->
-    <string name="monday">Monday</string>
-    <string name="tuesday">Tuesday</string>
-    <string name="wednesday">Wednesday</string>
-    <string name="thursday">Thursday</string>
-    <string name="friday">Friday</string>
-    <string name="saturday">Saturday</string>
+    <string name="monday">1.Monday</string>
+    <string name="tuesday">2.Tuesday</string>
+    <string name="wednesday">3.Wednesday</string>
+    <string name="thursday">4.Thursday</string>
+    <string name="friday">5.Friday</string>
+    <string name="saturday">6.Saturday</string>
     <string name="choose">Choose day:</string>
 
 
