rename App, add logo

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,16 +1,12 @@
 <resources>
-    <!-- Main-->
 
-    <string name="app_name">My Application</string>
+    <!-- Main-->
+    <string name="app_name">Schedule</string>
     <string name="title_activity_login">Activity Login</string>
     <string name="hello">Hello!</string>
     <string name = "create_account_text">If you are here for the first time, you can create account.</string>
     <string name = "login_text">or</string>
-
-
-
     <string name="action_settings">Settings</string>
-
 
     <!-- Login -->
     <string name="login">Login, please!</string>
@@ -23,7 +19,6 @@
     <string name="singupText">No account yet? Create one!</string>
     <string name="login_enterEmail">Enter your e-mail</string>
     <string name="title_activity_register">RegisterActivity</string>
-
 
     <!-- SignUp -->
     <string name="signup_title">Sign up, please!</string>
@@ -47,8 +42,5 @@
     <string name="time">TIME</string>
     <string name="lesson">LESSON</string>
     <string name="room">ROOM</string>
-
-
-
 
 </resources>
