add table "type" add new .sql file with actual schedule.

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <string name="time">TIME</string>
     <string name="lesson">LESSON</string>
     <string name="room">ROOM</string>
+    <string name="type">TYPE</string>
 
 </resources>
