--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="hello">Hello!</string>
     <string name="create_account_text">If you are here for the first time, you can</string>
     <string name="login_text">or</string>
-    <string name="ip">http://192.168.100.7:8080</string>
+    <string name="ip">http://10.1.30.92:8080</string>
 
     <!-- Login -->
     <string name="login">Login, please!</string>
@@ -53,6 +53,7 @@
 
     <!--  Schedule List -->
     <string name="title_activity_schedule_list">List Schedules</string>
+    <string name="choose_schedule">Choose schedule:</string>
 
     <!-- Dialog Windows -->
     <string name="wait">Please, wait..</string>
