add "add Schedule". add icon "delete", "edit" in ListSchedule

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="hello">Hello!</string>
     <string name="create_account_text">If you are here for the first time, you can</string>
     <string name="login_text">or</string>
-    <string name="ip">http://192.168.100.7:8080</string>
+    <string name="ip">http://192.168.43.187:8080</string>
 
     <!-- Login -->
     <string name="login">Login, please!</string>
@@ -63,8 +63,14 @@
     <string name="success_signup">Successful signing!</string>
     <string name="change_email">Somebody has that e-mail. Change it!</string>
 
+
     <string name="load_schedule">Load schedule...</string>
     <string name="success_schedule">Load Schedule Successfully!</string>
+
+    <string name="name_schedule">Name Schedule</string>
+    <string name="enter_name">Enter schedule name:</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 
 
 
