--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="hello">Hello!</string>
     <string name="create_account_text">If you are here for the first time, you can</string>
     <string name="login_text">or</string>
-    <string name="ip">http://192.168.43.187:8080</string>
+    <string name="ip">http://192.168.100.7:8080</string>
 
     <!-- Login -->
     <string name="login">Login, please!</string>
@@ -71,6 +71,8 @@
     <string name="enter_name">Enter schedule name:</string>
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
+    <string name ="yousure">Are you sure?</string>
+    <string name="delete_schedule">Delete schedule: </string>
 
 
 
