--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello">Hello!</string>
     <string name="create_account_text">If you are here for the first time, you can</string>
     <string name="login_text">or</string>
-    <string name="ip">http://192.168.1.5:8080</string>
+    <string name="ip">http://192.168.43.187:8080</string>
 
     <!-- Login -->
     <string name="login">Login, please!</string>
@@ -89,16 +89,18 @@
 
     <!--  New Class  -->
     <!--  Edit Class  -->
-    <string name="new_class">New class: </string>
-    <string name="edit_class">Edit class: </string>
+    <string name="new_class">New lesson: </string>
+    <string name="edit_class">Edit lesson: </string>
     <string name="class_name">Name</string>
     <string name="class_room">Room</string>
     <string name="class_stime">Start Time</string>
     <string name="class_etime">End Time</string>
     <string name="class_type">Type</string>
     <string name="saveButton">Save</string>
+    <string name="deleteclasstext">or: Delete this lesson!</string>
 
-    <string name="delete_class">Delete lesson?</string>
+
+    <string name="delete_class">Do you want to delete this lesson?</string>
 
 </resources>
 
