--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="login_title">Enter the system</string>
     <string name="email">E-mail</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="loginButton">          Login</string>
     <string name="singupText">No account yet? Create one!</string>
     <string name="login_enterEmail">Enter your e-mail</string>
